# lpxgp

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/: docs-manifest.json
.claude/commands/: audit.md  code-review.md  db-schema.md  dev.md  explore.md  fix-links.md  full-update.md  plan-section.md  push.md  regen-pdf.md  research-lp.md  status.md  sync-schema.md  sync.md  test.md
.claude/plans/: ai-matching-implementation.md  financial-analyst-automation.md  ir-team-integration.md  landing-page-design.md
.claude/plans/lpxgp-prd-review/: 00-index.md  02-agent-architecture.md  03-documentation-updates.md  04-agent-prompts.md  13-team-onboarding.md  14-email-calendar.md  16-financial-analyst.md  20-analyst-tooling.md
.github/workflows/: ci.yml
docs/: CONSISTENCY-REVIEW.md  curriculum.md  getting-started.md  milestones.md
docs/architecture/: agent-prompts.md  agents-implementation.md  batch-processing.md  cache-invalidation.md  monitoring-observability.md
docs/data/: Copy of IIQ Datatypes.xlsx  Data recollection pre-holiday - contacts.csv  INGESTION_PLAN.md  column_mapping.md  column_to_schema_mapping.md  emails.md  raw_info.md
docs/data/metabase_copy/: .gitignore
docs/milestones/: index.md  m0-setup.md  m1-auth-search.md  m1b-ir-core.md  m2-semantic.md  m3-matching.md  m4-pitch.md  m5-operations.md  m6-data-quality.md  m7-bidirectional.md  m8-integrations.md  m9-ir-events.md
docs/mockups/: accept-invitation.html  admin-companies.html  admin-company-detail.html  admin-dashboard.html  admin-data-quality.html  admin-health.html  admin-import.html  admin-lp-detail.html  admin-lps.html  admin-people.html  admin-users.html  dashboard-empty.html  dashboard.html  error-api.html  fa-billing.html  fa-dashboard.html  fa-gps.html  fa-lps.html  fa-onboard-gp.html  fa-onboard-lp.html  fa-people.html  fa-users.html  forgot-password.html  fund-create.html  fund-detail.html  fund-list.html  gp-detail.html  gp-search.html  index.html  landing.html  loading-matches.html  login.html  lp-dashboard.html  lp-detail.html  lp-match-detail.html  lp-matches.html  lp-pipeline.html  lp-search.html  lp-settings.html  lp-watchlist.html  (+10 more)
docs/prd/: PRD-v1.md  appendix.md  data-model.md  data-pipeline.md  decisions.md  index.md  nfr.md  overview.md  roadmap.md  screens.md  technical.md  test-specifications.md  user-stories.md
docs/prd/features/: auth.md  gp-profile.md  hitl.md  index.md  ir-analytics.md  lp-database.md  matching.md  pitch.md  ui.md
docs/prd/tests/: TEST-ANALYSIS.md  e2e-journeys.feature.md  fixtures.md  index.md  m0-foundation.feature.md  (+14 more)
docs/product-doc/: build_pdf.py  preview.py
docs/security/: SECURITY-FINDINGS.md  threat-model.md
docs/trd/: agents.md  architecture.md  data-pipeline.md  index.md  infrastructure.md  integrations.md
scripts/: generate_seed_data.py  load_seed_data.py  reset_database.py  test_ai_search_live.py
scripts/data_ingestion/: __init__.py  config.py  diff.py  main.py
src/: auth.py  cache.py  config.py  database.py  design_tokens.py  document_parser.py  file_upload.py  logging_config.py  lp_mandate.py  main.py  matching.py  pitch_deck_analyzer.py  preferences.py  search.py  shortlists.py  utils.py
src/middleware/: __init__.py  csrf.py  error_handler.py  rate_limit.py
src/models/: __init__.py  auth.py  base.py  funds.py  ir.py  lp.py  matching.py  pitch.py  responses.py
src/routers/: __init__.py  admin.py  auth_routes.py  crm.py  funds.py  gps.py  health.py  insights.py  lp_portal.py  lps.py  matches.py  pages.py  pipeline.py  pitch.py  settings_api.py  shortlist.py
src/services/: __init__.py  account_lockout.py
src/static/: manifest.json
src/templates/: base.html
supabase/: config.toml  seed.sql
supabase/migrations/: 001_core_schema.sql  002_funds.sql  003_relationships.sql  004_rls_policies.sql  005_rls_v2.sql  006_business_rules.sql  007_ir_core_schema.sql  009_security_features.sql  010_agent_schema.sql  011_access_control.sql  012_billing.sql  013_external_sync.sql  014_fix_external_constraints.sql  015_etl_expansion.sql  016_ai_matching_tables.sql
tests/: __init__.py  conftest.py  test_admin.py  test_api.py  test_auth.py  test_bdd_security.py  test_ci.py  test_config.py  test_data_crud.py  test_e2e.py  test_e2e_admin.py  test_e2e_ai_search.py  test_e2e_api.py  test_e2e_auth.py  test_e2e_crm.py  test_e2e_funds.py  test_e2e_gps.py  test_e2e_insights.py  test_e2e_lps.py  test_e2e_matches.py  test_e2e_navigation.py  test_e2e_new_features.py  test_e2e_outreach.py  test_e2e_quality.py  test_e2e_settings.py  test_e2e_shortlist.py  test_etl_ai_loaders.py  test_etl_extractors.py  test_etl_integration.py  test_etl_lps.py  test_etl_normalization.py  test_etl_normalization_properties.py  test_funds.py  test_gp_health.py  test_gp_search.py  test_gps.py  test_health.py  test_lp_portal.py  test_lps.py  test_lps_ai_search.py  (+14 more)
uploads/: .gitignore
(+142 files in other folders)
